--- a/apps/web/assets/src/stylesheets/styles.scss
+++ b/apps/web/assets/src/stylesheets/styles.scss
@@ -20,7 +20,7 @@ html, body {
 
 .main-container {
   margin: auto;
-  padding: 0 2rem 2rem 2rem;
+  padding: 0 4rem 4rem 4rem;
 
   @media (min-width: 768px) {
     max-width: 50%;
@@ -147,15 +147,16 @@ fieldset {
 
       input {
         border-top-right-radius: 0.2rem;
+        border-bottom-left-radius: 0rem;
         border-right-width: 1px;
+        border-bottom-width: 0;
         min-height: 4rem;
-        // border-bottom-right-radius: 0;
       }
 
       .gra-btn {
+        border-top-right-radius: 0;
         border-bottom-left-radius: 0.2rem;
         min-height: 4rem;
-        // border-top-left-radius: 0;
       }
     }
   }
@@ -184,6 +185,14 @@ fieldset {
 }
 
 .feeds-list {
+
+  @media (max-width: 767px) {
+    .col {
+      padding-top: 2rem;
+      padding-bottom: 2rem;
+    }
+  }
+
   .gra-card {
     height: 100%;
     margin-bottom: 0;
