Small design changes

--- a/apps/web/templates/_navbar.html.erb
+++ b/apps/web/templates/_navbar.html.erb
@@ -13,7 +13,7 @@
     </li>
     <li class='gra-nav-item'>
       <a class='<%= current_page?(settings_route) ? "current " : nil %>gra-nav-link' href='<%= settings_route %>'>
-        <i data-feather='settings'></i>
+        <i data-feather='user'></i>
       </a>
     </li>
     <li class='gra-nav-item'>
