--- a/apps/web/templates/settings/show.html.erb
+++ b/apps/web/templates/settings/show.html.erb
@@ -75,7 +75,7 @@
               div class: 'gra-form-group gra-center-text' do
                 submit class: 'gra-btn gra-width-100' do
                   span 'Change Password'
-                  i '', 'data-feather': 'user-check', class: 'icon-right'
+                  i '', 'data-feather': 'key', class: 'icon-right'
                 end
               end
             end
