--- a/apps/web/templates/feeds/index.html.erb
+++ b/apps/web/templates/feeds/index.html.erb
@@ -2,48 +2,49 @@
   <%= render partial: 'create_form' %>
 
   <% if parsed_feeds.present? %>
-    <div class='container'>
-      <div class='row feeds-list'>
-        <% parsed_feeds.each do |feed| %>
-          <div class='col col-33' id='<%= feed[:id] %>'>
-            <div class='gra-card'>
-              <div class='gra-card-content'>
-                <h5 class='gra-card-title'>
-                  <%= feed[:title] %>
-                  <span tooltip='edit' data-controller='edit' data-action='click->edit#showEdit' data-id='<%= feed[:id] %>'>
-                    <i data-feather='edit'></i>
-                  </span>
-                  <span tooltip='delete' data-controller='delete' data-action='click->delete#action' data-id='<%= feed[:id] %>'>
-                    <i data-feather='x-circle'></i>
-                  </span>
-                  <%= form_for :feeds, routes.feed_delete_path(feed[:id]), method: :delete, style: 'display: none;', id: feed[:id] do; end; %>
-                </h5>
+    <div class='row feeds-list'>
+      <% parsed_feeds.each do |feed| %>
+        <div class='col col-33' id='<%= feed[:id] %>'>
+          <div class='gra-card'>
+            <div class='gra-card-content'>
+              <h5 class='gra-card-title'>
+                <%= feed[:title] %>
+                <span tooltip='refresh' data-id='<%= feed[:id] %>'>
+                  <i data-feather='refresh-cw'></i>
+                </span>
+                <span tooltip='edit' data-controller='edit' data-action='click->edit#showEdit' data-id='<%= feed[:id] %>'>
+                  <i data-feather='edit'></i>
+                </span>
+                <span tooltip='delete' data-controller='delete' data-action='click->delete#action' data-id='<%= feed[:id] %>'>
+                  <i data-feather='x-circle'></i>
+                </span>
+                <%= form_for :feeds, routes.feed_delete_path(feed[:id]), method: :delete, style: 'display: none;', id: feed[:id] do; end; %>
+              </h5>
 
-                <div class='gra-card-body edit-form-container' id='edit-<%= feed[:id] %>' style='display: none;'>
-                  <%= render partial: 'update_form', locals: { feed: feed } %>
-                </div>
+              <div class='gra-card-body edit-form-container' id='edit-<%= feed[:id] %>' style='display: none;'>
+                <%= render partial: 'update_form', locals: { feed: feed } %>
+              </div>
 
-                <div class='gra-card-body' id='show-<%= feed[:id] %>'>
-                  <% if feed[:error].present? %>
-                    <%= feed[:error] %>
-                  <% end %>
-                  <% if feed[:entries].present? %>
-                    <ul class='gra-list'>
-                      <% feed[:entries].each do |entry| %>
-                        <li class='gra-list-item'>
-                          <a href='<%= entry.link %>' target='_blank'>
-                            <%= entry.title %>
-                          </a>
-                        </li>
-                      <% end %>
-                    </ul>
-                  <% end %>
-                </div>
+              <div class='gra-card-body' id='show-<%= feed[:id] %>'>
+                <% if feed[:error].present? %>
+                  <%= feed[:error] %>
+                <% end %>
+                <% if feed[:entries].present? %>
+                  <ul class='gra-list'>
+                    <% feed[:entries].each do |entry| %>
+                      <li class='gra-list-item'>
+                        <a href='<%= entry.link %>' target='_blank'>
+                          <%= entry.title %>
+                        </a>
+                      </li>
+                    <% end %>
+                  </ul>
+                <% end %>
               </div>
             </div>
           </div>
-        <% end %>
-      </div>
+        </div>
+      <% end %>
     </div>
   <% end %>
 </div>
