Use turbo frames

--- a/apps/web/templates/feed/_update_form.html.erb
+++ b/apps/web/templates/feed/_update_form.html.erb
@@ -1,21 +1,21 @@
-<%= form_for :feeds, routes.feed_update_path(feed[:id]), method: :patch do
+<%= form_for :feeds, routes.feed_update_path(parsed_feed[:id]), method: :patch do
   div class: 'edit-feed-form' do
     div class: 'gra-form-group' do
       span class: 'prefixed-input prefixed-input--title' do
-        text_field :title, placeholder: 'Feed Title', value: feed[:title]
+        text_field :title, placeholder: 'Feed Title', value: parsed_feed[:title]
       end
     end
 
     div class: 'gra-form-group' do
       span class: 'prefixed-input prefixed-input--url' do
-        text_field :feed_url, placeholder: 'Feed URL', value: feed[:source]
+        text_field :feed_url, placeholder: 'Feed URL', value: parsed_feed[:source]
       end
     end
 
     div class: 'gra-form-actions' do
       submit 'Update', class: 'gra-btn'
       a 'Back', class: 'gra-btn gra-btn-outline', 'data-controller': 'edit',
-        'data-action': 'click->edit#showPanel', 'data-id': feed[:id]
+        'data-action': 'click->edit#showPanel', 'data-id': parsed_feed[:id]
     end
   end
 end %>
