--- a/apps/web/templates/feeds/show.html.erb
+++ b/apps/web/templates/feeds/show.html.erb
@@ -1,7 +1,7 @@
 <turbo-frame id='<%= parsed_feed[:id] %>'>
   <div class='gra-card'>
     <div class='gra-card-content'>
-      <h5 class='gra-card-title'>
+      <h5 class='gra-card-title hidden-mobile'>
         <%= parsed_feed[:title] %>
         <span tooltip='refresh' data-controller='refresh' data-action='click->refresh#action' data-id='<%= parsed_feed[:id] %>'>
           <i data-feather='refresh-cw'></i>
@@ -12,7 +12,30 @@
         <span tooltip='delete' data-controller='delete' data-action='click->delete#action' data-id='<%= parsed_feed[:id] %>'>
           <i data-feather='x-circle'></i>
         </span>
-        <%= form_for :feeds, routes.feed_delete_path(parsed_feed[:id]), method: :delete, style: 'display: none;', id: parsed_feed[:id] do; end; %>
+      </h5>
+
+      <h5 class='gra-card-title visible-mobile'>
+        <span class='gra-block'>
+          <%= parsed_feed[:title] %>
+        </span>
+
+        <div class='feed-actions'>
+          <span data-controller='reorder' data-action='click->reorder#down' data-id='<%= parsed_feed[:id] %>'>
+            <i data-feather='arrow-down'></i>
+          </span>
+          <span data-controller='reorder' data-action='click->reorder#up' data-id='<%= parsed_feed[:id] %>'>
+            <i data-feather='arrow-up'></i>
+          </span>
+          <span data-controller='refresh' data-action='click->refresh#action' data-id='<%= parsed_feed[:id] %>'>
+            <i data-feather='refresh-cw'></i>
+          </span>
+          <span data-controller='edit' data-action='click->edit#showEdit' data-id='<%= parsed_feed[:id] %>'>
+            <i data-feather='edit'></i>
+          </span>
+          <span data-controller='delete' data-action='click->delete#action' data-id='<%= parsed_feed[:id] %>'>
+            <i data-feather='x-circle'></i>
+          </span>
+        </div>
       </h5>
 
       <div class='gra-card-body edit-form-container' id='edit-<%= parsed_feed[:id] %>' style='display: none;'>
@@ -36,5 +59,6 @@
         <% end %>
       </div>
     </div>
+    <%= form_for :feeds, routes.feed_delete_path(parsed_feed[:id]), method: :delete, style: 'display: none;', id: parsed_feed[:id] do; end; %>
   </div>
 </turbo-frame>
