Change file charset encodings to UTF8

--- a/apps/web/assets/src/stylesheets/styles.scss
+++ b/apps/web/assets/src/stylesheets/styles.scss
@@ -1,4 +1,4 @@
-@use 'sanitize.css/sanitize';
+﻿@use 'sanitize.css/sanitize';
 @use 'sanitize.css/typography';
 @use 'sanitize.css/forms';
 @use 'gralig/dist/gralig.min';
