--- a/apps/web/assets/src/stylesheets/navbar.scss
+++ b/apps/web/assets/src/stylesheets/navbar.scss
@@ -10,6 +10,10 @@
     justify-content: center;
     width: 100%;
 
+    @media screen and (max-width: 767px) {
+      justify-content: space-evenly;
+    }
+
     .gra-nav-item {
       padding: 0;
 
@@ -20,6 +24,11 @@
       .feather {
         height: 20px;
         width: 20px;
+
+        @media screen and (max-width: 767px) {
+          height: 30px;
+          width: 30px;
+        }
       }
 
       a {
