Freeze scrolling on form submissions utility

--- a/apps/web/templates/auth/reset_password.html.erb
+++ b/apps/web/templates/auth/reset_password.html.erb
@@ -14,7 +14,7 @@
           </div>
         <% elsif requesting_reset_email %>
           <%=
-            form_for :auth, routes.process_reset_password_path do
+            form_for :auth, routes.process_reset_password_path, 'data-scrollfreeze': true do
               fieldset do
                 legend do
                   h5 'Request Password Reset', class: 'gra-heading'
@@ -64,7 +64,7 @@
           %>
         <% elsif providing_new_password %>
           <%=
-            form_for :auth, routes.process_reset_password_path do
+            form_for :auth, routes.process_reset_password_path, 'data-scrollfreeze': true do
               fieldset do
                 legend do
                   title = new_account ? 'Create a password for your account' : 'Set a new password'
