--- a/apps/web/templates/feeds/_create_form.html.erb
+++ b/apps/web/templates/feeds/_create_form.html.erb
@@ -1,5 +1,5 @@
 <%=
-  form_for :feeds, routes.feed_create_path, class: 'col col-33' do
+  form_for :feeds, routes.feed_create_path, class: 'col col-33', 'data-scrollfreeze': true do
     div class: 'gra-card' do
       div class: 'gra-card-content' do
         h5 class: 'gra-card-title' do
