--- a/apps/web/assets/src/stylesheets/styles.scss
+++ b/apps/web/assets/src/stylesheets/styles.scss
@@ -122,85 +122,6 @@ fieldset {
   flex-wrap: wrap !important;
 }
 
-.add-feed-form {
-  display: flex;
-  align-items: stretch;
-  flex-wrap: nowrap;
-
-  @media (max-width: 767px) {
-    flex-wrap: wrap;
-  }
-
-  .gra-form-group {
-    margin-bottom: 0;
-    flex: 1;
-
-    &:first-child {
-      flex-basis: 85%;
-    }
-
-    &:last-child {
-      flex-basis: 15%;
-    }
-
-    input {
-      border-top-right-radius: 0;
-      border-bottom-right-radius: 0;
-      border-right-width: 0;
-    }
-
-    .gra-btn {
-      height: 100%;
-      border-top-left-radius: 0;
-      border-bottom-left-radius: 0;
-    }
-
-    @media (max-width: 767px) {
-      &:first-child {
-        flex-basis: 100%;
-      }
-
-      &:last-child {
-        flex-basis: 100%;
-      }
-
-      input {
-        border-top-right-radius: 0.2rem;
-        border-bottom-left-radius: 0rem;
-        border-right-width: 1px;
-        border-bottom-width: 0;
-        min-height: 4rem;
-      }
-
-      .gra-btn {
-        border-top-right-radius: 0;
-        border-bottom-left-radius: 0.2rem;
-        min-height: 4rem;
-      }
-    }
-  }
-}
-
-.edit-form-container, .delete-form-container {
-  padding: 1.6rem;
-
-  .edit-feed-form, .delete-feed-form {
-    .gra-form-actions {
-      display: flex;
-      flex-wrap: wrap;
-      align-content: center;
-      align-items: center;
-      justify-content: center;
-      gap: 1.5rem;
-
-      .gra-btn {
-        width: 100%;
-        margin: 0;
-      }
-    }
-  }
-}
-
 #feeds-form {
   margin-bottom: 2rem;
 }
@@ -273,6 +194,93 @@ fieldset {
         .gra-list {
           padding: 0;
         }
+
+        &.edit-form-container, &.delete-form-container {
+          // align-items: center;
+          // display: flex;
+          // flex-grow: 1;
+          // justify-content: center;
+          padding: 1.6rem;
+
+          > form {
+            width: 100%;
+
+            .edit-feed-form, .delete-feed-form {
+              .gra-form-actions {
+                display: flex;
+                flex-wrap: wrap;
+                align-content: center;
+                align-items: center;
+                justify-content: center;
+                gap: 1.5rem;
+
+                .gra-btn {
+                  width: 100%;
+                  margin: 0;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.add-feed-form {
+  display: flex;
+  align-items: stretch;
+  flex-wrap: nowrap;
+
+  @media (max-width: 767px) {
+    flex-wrap: wrap;
+  }
+
+  .gra-form-group {
+    margin-bottom: 0;
+    flex: 1;
+
+    &:first-child {
+      flex-basis: 85%;
+    }
+
+    &:last-child {
+      flex-basis: 15%;
+    }
+
+    input {
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+      border-right-width: 0;
+    }
+
+    .gra-btn {
+      height: 100%;
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+
+    @media (max-width: 767px) {
+      &:first-child {
+        flex-basis: 100%;
+      }
+
+      &:last-child {
+        flex-basis: 100%;
+      }
+
+      input {
+        border-top-right-radius: 0.2rem;
+        border-bottom-left-radius: 0rem;
+        border-right-width: 1px;
+        border-bottom-width: 0;
+        min-height: 4rem;
+      }
+
+      .gra-btn {
+        border-top-right-radius: 0;
+        border-bottom-left-radius: 0.2rem;
+        min-height: 4rem;
       }
     }
   }
