--- a/apps/web/templates/feeds/_create_form.html.erb
+++ b/apps/web/templates/feeds/_create_form.html.erb
@@ -2,7 +2,7 @@
   form_for :feeds, routes.feed_create_path, class: 'col col-33', 'data-scrollfreeze': true do
     div class: 'gra-card' do
       div class: 'gra-card-content' do
-        h5 class: 'gra-card-title' do
+        h5 class: 'gra-card-title', style: 'cursor: default' do
           div class: 'gra-form-group' do
             span class: 'prefixed-input prefixed-input--title' do
               text_field :title, placeholder: 'Feed Title'
