--- a/apps/web/templates/feeds/_delete_form.html.erb
+++ b/apps/web/templates/feeds/_delete_form.html.erb
@@ -2,9 +2,14 @@
   form_for :feeds, routes.feed_delete_path(parsed_feed[:id]), method: :delete, 'data-scrollfreeze': true do
     div class: 'delete-feed-form' do
       div class: 'gra-form-actions' do
-        submit 'Delete', class: 'gra-btn'
-        a 'Back', class: 'gra-btn gra-btn-outline', 'data-controller': 'delete',
-          'data-action': 'click->delete#hide', 'data-id': parsed_feed[:id]
+        submit class: 'gra-btn' do
+          span 'Delete'
+          i '', 'data-feather': 'x', class: 'icon-right'
+        end
+        a class: 'gra-btn gra-btn-outline', 'data-controller': 'delete', 'data-action': 'click->delete#hide', 'data-id': parsed_feed[:id] do
+          i '', 'data-feather': 'arrow-left', class: 'icon-left'
+          span 'Back'
+        end
       end
     end
   end
