--- a/apps/web/templates/feeds/_update_form.html.erb
+++ b/apps/web/templates/feeds/_update_form.html.erb
@@ -13,9 +13,14 @@
     end
 
     div class: 'gra-form-actions' do
-      submit 'Update', class: 'gra-btn'
-      a 'Back', class: 'gra-btn gra-btn-outline', 'data-controller': 'edit',
-        'data-action': 'click->edit#showPanel', 'data-id': parsed_feed[:id]
+      submit class: 'gra-btn' do
+        span 'Update'
+        i '', 'data-feather': 'check-circle', class: 'icon-right'
+      end
+      a class: 'gra-btn gra-btn-outline', 'data-controller': 'edit', 'data-action': 'click->edit#showPanel', 'data-id': parsed_feed[:id] do
+        i '', 'data-feather': 'arrow-left', class: 'icon-left'
+        span 'Back'
+      end
     end
   end
 end %>
