Config updates; compression; cache-control

--- a/apps/web/templates/application.html.erb
+++ b/apps/web/templates/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
   <head>
     <title>RSS Reader</title>
     <meta name='description' content='Collect all of your favorite RSS feeds in one easy-to-use place'>
