--- a/apps/web/templates/feeds/show.html.erb
+++ b/apps/web/templates/feeds/show.html.erb
@@ -53,7 +53,7 @@
         <ul class='gra-list'>
           <% parsed_feed[:entries].each do |entry| %>
             <li class='gra-list-item'>
-              <a href='<%= entry.url %>' target='_blank'>
+              <a href='<%= entry.url %>' target='_blank' rel='noopener noreferrer' referrerpolicy='no-referrer'>
                 <%= entry.title %>
               </a>
             </li>
