Refresh loading design updates

--- a/apps/web/templates/_navbar.html.erb
+++ b/apps/web/templates/_navbar.html.erb
@@ -21,5 +21,13 @@
         <i data-feather='log-out'></i>
       </a>
     </li>
+
+    <li class='gra-nav-item' style='border-left: 1px solid #d9dcde; border-right: 1px solid #d9dcde;'></li>
+
+    <li class='gra-nav-item'>
+      <a class='gra-nav-link' href='#' data-controller='refresh-all' data-action='click->refresh-all#action:prevent'>
+        <i data-feather='refresh-cw'></i>
+      </a>
+    </li>
   </ul>
 </nav>
