Finally some preferences

--- a/apps/web/assets/src/stylesheets/gralig-overrides.scss
+++ b/apps/web/assets/src/stylesheets/gralig-overrides.scss
@@ -45,3 +45,9 @@ select,
 textarea {
   font-size: 1.6rem;
 }
+
+.gra-modal-wrapper.open {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+}
