--- a/apps/web/templates/_navbar.html.erb
+++ b/apps/web/templates/_navbar.html.erb
@@ -29,5 +29,11 @@
         <i data-feather='refresh-cw'></i>
       </a>
     </li>
+
+    <li class='gra-nav-item'>
+      <a class='gra-nav-link' href='#' data-controller='modal' data-action='click->modal#open:prevent' data-id='preferences-modal'>
+        <i data-feather='settings'></i>
+      </a>
+    </li>
   </ul>
 </nav>
