--- a/apps/web/templates/application.html.erb
+++ b/apps/web/templates/application.html.erb
@@ -1,5 +1,9 @@
+<%
+  hash = current_user&.settings&.value || UserSettings::DEFAULTS
+  prefs = Json.build(hash)
+%>
 <!DOCTYPE html>
-<html lang='en'>
+<html lang='en-US'>
   <head>
     <title>RSS Reader</title>
     <meta name='description' content='Collect all of your favorite RSS feeds in one easy-to-use place'>
@@ -12,13 +16,57 @@
     <%= javascript 'scripts', defer: true %>
     <%= favicon 'favicon.png', type: 'image/png' %>
   </head>
-  <body>
+  <body class='<%= hash[:theme] %>'>
     <% if authenticated? %>
       <%= render partial: './navbar' %>
     <% end %>
     <%= yield %>
+
+    <div id='preferences-modal' class='gra-modal-wrapper' tabindex='-1' role='dialog'>
+      <a class='gra-modal-overlay' href='#' data-controller='modal' data-action='click->modal#close:prevent' data-id='preferences-modal'></a>
+      <div class='gra-modal'>
+        <div class='gra-modal-header'>
+          <h5 class='gra-modal-title' id='modal_title'>
+            Preferences
+          </h5>
+        </div>
+        <%=
+          form_for :preferences, routes.settings_update_path, method: :patch, 'data-scrollfreeze': true do
+            div class: 'gra-modal-body' do
+              fieldset do
+                hidden_field :context, value: 'preferences'
+
+                div class: 'gra-form-group' do
+                  div class: 'gra-custom-form-control gra-switch yellow' do
+                    check_box :theme, class: 'gra-custom-form-input', checked_value: 'light', unchecked_value: 'dark', checked: hash[:theme] == 'light'
+                    label 'Theme', for: :theme, class: 'gra-custom-form-label'
+                  end
+                end
+
+                div class: 'gra-form-group' do
+                  text_field :refresh_interval, inputmode: 'numeric', pattern: '[0-9]*', value: hash[:refresh_interval]
+                  label 'Auto-refresh Interval', for: :refresh_interval
+                end
+              end
+            end
+
+            div class: 'gra-modal-footer' do
+              div class: 'gra-modal-actions' do
+                a 'Close', class: 'gra-btn gra-btn-clear', href: '#', 'data-controller': 'modal', 'data-action': 'click->modal#close:prevent', 'data-id': 'preferences-modal'
+                submit class: 'gra-btn' do
+                  span 'Save'
+                  i 'data-feather': 'check', class: 'icon-right'
+                end
+              end
+            end
+          end
+        %>
+      </div>
+    </div>
+
     <script type='text/javascript'>
       window.RssReader = {
+        preferences: <%= prefs %>,
         <% if flash[:error_toast].present? %>
           errmsg: '<%= flash[:error_toast] %>',
         <% end %>
