Some mobile fixes

--- a/apps/web/templates/application.html.erb
+++ b/apps/web/templates/application.html.erb
@@ -24,7 +24,7 @@
 
     <div id='preferences-modal' class='gra-modal-wrapper' tabindex='-1' role='dialog'>
       <a class='gra-modal-overlay' href='#' data-controller='modal' data-action='click->modal#close:prevent' data-id='preferences-modal'></a>
-      <div class='gra-modal'>
+      <div class='gra-modal' style='max-width: 90%;'>
         <div class='gra-modal-header'>
           <h5 class='gra-modal-title' id='modal_title'>
             Preferences
