--- a/apps/web/assets/src/stylesheets/navbar.scss
+++ b/apps/web/assets/src/stylesheets/navbar.scss
@@ -1,4 +1,6 @@
-﻿.navbar {
+﻿@use './mixins/views' as *;
+
+.navbar {
   margin-left: 4rem;
   margin-right: 4rem;
   padding-bottom: 3rem;
@@ -10,7 +12,7 @@
     justify-content: center;
     width: 100%;
 
-    @media screen and (max-width: 767px) {
+    @include mobile-view() {
       justify-content: space-evenly;
     }
 
@@ -25,7 +27,7 @@
         height: 20px;
         width: 20px;
 
-        @media screen and (max-width: 767px) {
+        @include mobile-view() {
           height: 30px;
           width: 30px;
         }
