--- a/apps/web/templates/_navbar.html.erb
+++ b/apps/web/templates/_navbar.html.erb
@@ -11,6 +11,18 @@
         <i data-feather='home'></i>
       </a>
     </li>
+    <% if current_page?(feed_route) %>
+    <li class='gra-nav-item'>
+      <a class='gra-nav-link' href='#' data-controller='refresh-all' data-action='click->refresh-all#action:prevent'>
+        <i data-feather='refresh-cw'></i>
+      </a>
+    </li>
+    <li class='gra-nav-item'>
+      <a class='gra-nav-link' href='#' data-controller='modal' data-action='click->modal#open:prevent' data-id='preferences-modal'>
+        <i data-feather='settings'></i>
+      </a>
+    </li>
+    <% end %>
     <li class='gra-nav-item'>
       <a class='<%= current_page?(settings_route) ? "current " : nil %>gra-nav-link' href='<%= settings_route %>'>
         <i data-feather='user'></i>
@@ -19,20 +31,6 @@
     <li class='gra-nav-item'>
       <a class='gra-nav-link' href='<%= logout_route %>'>
         <i data-feather='log-out'></i>
-      </a>
-    </li>
-
-    <li class='gra-nav-item' style='border-left: 1px solid #d9dcde; border-right: 1px solid #d9dcde;'></li>
-
-    <li class='gra-nav-item'>
-      <a class='gra-nav-link' href='#' data-controller='refresh-all' data-action='click->refresh-all#action:prevent'>
-        <i data-feather='refresh-cw'></i>
-      </a>
-    </li>
-
-    <li class='gra-nav-item'>
-      <a class='gra-nav-link' href='#' data-controller='modal' data-action='click->modal#open:prevent' data-id='preferences-modal'>
-        <i data-feather='settings'></i>
       </a>
     </li>
   </ul>
