--- a/apps/web/templates/_navbar.html.erb
+++ b/apps/web/templates/_navbar.html.erb
@@ -1,17 +1,5 @@
-<%
-  feed_route = routes.feed_index_path
-  settings_route = routes.settings_show_path
-  logout_route = routes.sign_out_path
-%>
-
 <nav class='navbar'>
   <ul class='gra-nav'>
-    <li class='gra-nav-item'>
-      <a class='<%= current_page?(feed_route) ? "current " : nil %>gra-nav-link' href='<%= feed_route %>'>
-        <i data-feather='home'></i>
-      </a>
-    </li>
-    <% if current_page?(feed_route) %>
     <li class='gra-nav-item'>
       <a class='gra-nav-link' href='#' data-controller='refresh-all' data-action='click->refresh-all#action:prevent'>
         <i data-feather='refresh-cw'></i>
@@ -22,16 +10,18 @@
         <i data-feather='settings'></i>
       </a>
     </li>
-    <% end %>
     <li class='gra-nav-item'>
-      <a class='<%= current_page?(settings_route) ? "current " : nil %>gra-nav-link' href='<%= settings_route %>'>
+      <a class='gra-nav-link' data-controller='modal' data-action='click->modal#open:prevent' data-id='account-modal'>
         <i data-feather='user'></i>
       </a>
     </li>
     <li class='gra-nav-item'>
-      <a class='gra-nav-link' href='<%= logout_route %>'>
+      <a class='gra-nav-link' href='<%= routes.sign_out_path %>'>
         <i data-feather='log-out'></i>
       </a>
     </li>
   </ul>
 </nav>
+
+<%= render partial: './account_modal' %>
+<%= render partial: './preferences_modal' %>
