--- a/apps/web/assets/src/stylesheets/styles.scss
+++ b/apps/web/assets/src/stylesheets/styles.scss
@@ -18,6 +18,10 @@
 
 html, body {
   height: 100%;
+
+  @supports (scroll-behavior: smooth) {
+    scroll-behavior: smooth;
+  }
 }
 
 @include desktop-view() {
@@ -29,6 +33,58 @@ html, body {
 @include mobile-view() {
   .hidden-mobile {
     display: none;
+  }
+}
+
+#scroll-to-top {
+  visibility: visible;
+  position: fixed;
+  bottom: 3rem;
+  right: 3rem;
+  cursor: pointer;
+  animation: fadeIn 0.15s ease;
+  opacity: 1;
+
+  &.hide {
+    visibility: hidden;
+    opacity: 0;
+    animation: fadeOut 0.15s ease;
+    pointer-events: none;
+    cursor: default;
+  }
+
+  .feather {
+    width: 3rem;
+    height: 3rem;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    visibility: none;
+    opacity: 0;
+  }
+
+  1% {
+    visibility: visible;
+    opacity: 0;
+  }
+
+  100% {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  100% {
+    visibility: hidden;
+    opacity: 0;
   }
 }
 
