--- a/apps/web/templates/application.html.erb
+++ b/apps/web/templates/application.html.erb
@@ -22,6 +22,10 @@
     <% end %>
     <%= yield %>
 
+    <span id='scroll-to-top' class='hide'>
+      <i data-feather='arrow-up'></i>
+    </span>
+
     <script type='text/javascript'>
       window.RssReader = {
         preferences: <%= prefs %>,
