--- a/apps/web/assets/src/stylesheets/styles.scss
+++ b/apps/web/assets/src/stylesheets/styles.scss
@@ -36,6 +36,31 @@ html, body {
   }
 }
 
+#js-notice {
+  align-items: center;
+  background-color: #fff;
+  bottom: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  left: 0;
+  overflow: hidden;
+  padding: 2rem;
+  position: fixed;
+  right: 0;
+  text-align: center;
+  top: 0;
+  z-index: 10000;
+
+  a {
+    color: #5f676d;
+
+    &:hover {
+      color: #5f676d;
+    }
+  }
+}
+
 #scroll-to-top {
   visibility: visible;
   position: fixed;
