--- a/apps/web/templates/application.html.erb
+++ b/apps/web/templates/application.html.erb
@@ -16,7 +16,7 @@
     <%= javascript 'scripts', defer: true %>
     <%= favicon 'favicon.png', type: 'image/png' %>
   </head>
-  <body class='<%= hash[:theme] %>'>
+  <body class='<%= hash[:theme] %>' style='overflow: hidden'>
     <% if authenticated? %>
       <%= render partial: './navbar' %>
     <% end %>
@@ -26,7 +26,22 @@
       <i data-feather='arrow-up'></i>
     </span>
 
+    <noscript>
+      <div id='js-notice'>
+        <div>
+          <div>JavaScript is required for this app to run.</div>
+          <div>
+            <a href='https://www.enable-javascript.com/' target='_blank' rel='noreferrer noopener'>
+              Please enable it to continue.
+            </a>
+          </div>
+        </div>
+      </div>
+    </noscript>
+
     <script type='text/javascript'>
+      document.body.style.removeProperty('overflow');
+
       window.RssReader = {
         preferences: <%= prefs %>,
         <% if flash[:error_toast].present? %>
