--- a/apps/web/templates/404.html.erb
+++ b/apps/web/templates/404.html.erb
@@ -6,23 +6,9 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link href='https://fonts.googleapis.com' rel='preconnect'>
     <link href='https://fonts.gstatic.com' rel='preconnect' crossorigin>
-    <link href='/favicon.png' rel='shortcut icon' type='image/png'>
+    <link href='/assets/styles.css' rel='stylesheet' type='text/css'>
+    <link href='/assets/favicon.png' rel='shortcut icon' type='image/png'>
     <style type='text/css'>
-      @import url("https://fonts.googleapis.com/css2?family=Hubballi&family=Oxanium:wght@200;300;400;500;600;700;800&display=swap");
-
-      * {
-        box-sizing: inherit;
-      }
-
-      body {
-        color: #5f676d;
-        text-rendering: optimizelegibility;
-        font-family: 'Hubballi', sans-serif;
-        font-size: 1.6rem;
-        font-weight: 400;
-        line-height: 1.5;
-      }
-
       body > div {
         align-items: center;
         background-color: #fff;
@@ -41,19 +27,15 @@
       }
 
       a {
-        color: #5f676d;
-        cursor: pointer;
-        font-weight: lighter;
-        text-decoration: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 0.5rem;
       }
 
-      a:hover {
-        text-decoration: underline;
-      }
-
-      h1, h3 {
-        margin: 0;
-        padding: 0;
+      .feather {
+        width: 2rem;
+        height: 2rem;
       }
     </style>
   </head>
@@ -62,7 +44,7 @@
       <div>
         <h1>Page Not Found</h1>
         <h3>
-          <a href='/' style='display: flex; justify-content: center; align-items: center; gap: 0.5rem;'>
+          <a href='/'>
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevrons-left">
               <polyline points="11 17 6 12 11 7"></polyline>
               <polyline points="18 17 13 12 18 7"></polyline>
