Contact in footer

--- a/apps/web/assets/src/stylesheets/styles.scss
+++ b/apps/web/assets/src/stylesheets/styles.scss
@@ -361,6 +361,11 @@ fieldset {
   }
 }
 
+footer {
+  text-align: center;
+  margin-bottom: 1.5rem;
+}
+
 // Dark mode adjustments
 body.dark {
   .prefixed-input {
