--- a/apps/web/templates/application.html.erb
+++ b/apps/web/templates/application.html.erb
@@ -39,6 +39,12 @@
       </div>
     </noscript>
 
+    <footer>
+      <a href='mailto:parker@parkersprouse.me'>
+        parker@parkersprouse.me
+      </a>
+    </footer>
+
     <script type='text/javascript'>
       document.body.style.removeProperty('overflow');
 
