--- a/apps/web/templates/500.html.erb
+++ b/apps/web/templates/500.html.erb
@@ -9,23 +9,6 @@
     <link href='/assets/styles.css' rel='stylesheet' type='text/css'>
     <link href='/assets/favicon.png' rel='shortcut icon' type='image/png'>
     <style type='text/css'>
-      body > div {
-        align-items: center;
-        background-color: #fff;
-        bottom: 0;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        left: 0;
-        overflow: hidden;
-        padding: 2rem;
-        position: fixed;
-        right: 0;
-        text-align: center;
-        top: 0;
-        z-index: 10000;
-      }
-
       a {
         display: flex;
         justify-content: center;
@@ -37,10 +20,22 @@
         width: 2rem;
         height: 2rem;
       }
+
+      #notice {
+        z-index: 1;
+      }
+
+      footer {
+        position: absolute;
+        bottom: 1rem;
+        left: 0;
+        right: 0;
+        z-index: 2;
+      }
     </style>
   </head>
   <body>
-    <div>
+    <div id='notice'>
       <div>
         <h1>An Unexpected Error Occurred</h1>
         <h3>
@@ -57,5 +52,11 @@
         </h3>
       </div>
     </div>
+
+    <footer>
+      <a href='mailto:parker@parkersprouse.me'>
+        parker@parkersprouse.me
+      </a>
+    </footer>
   </body>
 </html>
