--- a/apps/web/templates/application.html.erb
+++ b/apps/web/templates/application.html.erb
@@ -27,7 +27,7 @@
     </span>
 
     <noscript>
-      <div id='js-notice'>
+      <div id='notice'>
         <div>
           <div>JavaScript is required for this app to run.</div>
           <div>
